--- a/Static/Styles/navbar.css
+++ b/Static/Styles/navbar.css
@@ -1,6 +1,6 @@
 .navbar {
   display: flex;
-  background-color: rgb(149, 147, 147);
+  background-color: rgb(41, 41, 41);
 }
 
 .nav-list {
@@ -16,7 +16,7 @@
 }
 
 .nav-list a:hover {
-  background-color: rgb(194, 190, 190);
+  background-color: rgb(93, 91, 91);
 }
 
 .nav-btn {
@@ -29,8 +29,8 @@
     padding-inline: 10px;
     padding-bottom: 3px;
     border: none;
-    background-color: rgb(165, 165, 165);
-    color: black;
+    background-color: rgb(0, 0, 0);
+    color: rgb(228, 228, 228);
     display: block;
     cursor: pointer;
   }
@@ -40,6 +40,10 @@
   .drop:hover .nav-list {
     display: block;
     position: absolute;
+    right: 1px;
     background-color: rgb(165, 165, 165);
+  }
+  .navbar {
+    justify-content: space-between;
   }
 }
