--- a/Static/Styles/stilecard1.css
+++ b/Static/Styles/stilecard1.css
@@ -27,19 +27,33 @@
   border-color: rgb(136, 136, 230);
 }
 
-/* @media (max-width: 800px) {
-  .conteiner {
+/* @media (max-width: 800px) { */
+/* .conteiner {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(5);
-  }
-}
+  } */
 
-@media (max-width: 800px) {
-  .conteiner {
+@media (max-width: 1000px) {
+  /* .conteiner {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(9);
   }
   .card {
     margin-inline: 0;
+  } */
+  .main-conteiner {
+    grid-template-rows: repeat(3);
   }
-} */
+  .left-bar {
+    grid-column: 1/13;
+    grid-row: 1/2;
+  }
+  .conteiner {
+    grid-columns: 1/3;
+    grid-rows: 2/3;
+  }
+  .right-bar {
+    grid-column: 1/13;
+    grid-row: 3/4;
+  }
+}
